@@ -1,5 +1,6 @@
 0.12.24 Dexember xx, 2022
 - use same method as Autocat3 for resering PubInfo
+- in generated header, render each creator on a separate line
 
 0.12.23 November 29, 2022
 - fix the fix to the whitespace around `<br>` to fix issue with 'None' appearing in EPUBS
